Fixed text alignment

--- a/src/main/webapp/styles/modules/events.scss
+++ b/src/main/webapp/styles/modules/events.scss
@@ -19,6 +19,7 @@
   flex: 0 0 90px;
   color: #666;
   font-size: .7em;
+  text-align: right;
 }
 .event-time {
   line-height: 28px;
